// Copyright (C) 2018 Storj Labs, Inc.
// See LICENSE for copying information.

syntax = "proto3";
option go_package = "pb";

import "google/protobuf/duration.proto";
import "gogo.proto";
import "node.proto";

package overlay;

// Overlay defines the interface for communication with the overlay network
service Overlay {
    // Lookup finds a nodes address from the network
    rpc Lookup(LookupRequest) returns (LookupResponse);
    // BulkLookup finds nodes addresses from the network
    rpc BulkLookup(LookupRequests) returns (LookupResponses);
    // FindStorageNodes finds a list of nodes in the network that meet the specified request parameters
    rpc FindStorageNodes(FindStorageNodesRequest) returns (FindStorageNodesResponse);
}

service Nodes {
    rpc Query(QueryRequest) returns (QueryResponse);
    rpc Ping(PingRequest) returns (PingResponse);
}

// LookupRequest is is request message for the lookup rpc call
message LookupRequest {
    bytes node_id = 1[(gogoproto.customtype) = "NodeID", (gogoproto.nullable) = false];
}

// LookupResponse is is response message for the lookup rpc call
message LookupResponse {
    node.Node node = 1;
}

//LookupRequests is a list of LookupRequest
message LookupRequests {
    // TODO: `lookup_request`
    repeated LookupRequest lookuprequest = 1;
}

//LookupResponse is a list of LookupResponse
message LookupResponses {
    // TODO: `lookup_response`
    repeated LookupResponse lookupresponse = 1;
}


// FindStorageNodesResponse is is response message for the FindStorageNodes rpc call
message FindStorageNodesResponse {
    repeated node.Node nodes = 1;
}

// FindStorageNodesRequest is is request message for the FindStorageNodes rpc call
message FindStorageNodesRequest {
    // TODO: `object_size`
    int64 objectSize = 1;
    // TODO: `contract_length`
    google.protobuf.Duration contractLength = 2;
    OverlayOptions opts = 3;
    bytes start = 4;
    // TODO: `max_nodes`
    int64 maxNodes = 5;
}

// OverlayOptions is a set of criteria that a node must meet to be considered for a storage opportunity
message OverlayOptions {
    google.protobuf.Duration maxLatency = 1;
    // TODO: `min_reputation`
    node.NodeRep minReputation = 2;
    // TODO: `min_speed_kbps`
    int64 minSpeedKbps = 3;
    int64 amount = 4;
    node.NodeRestrictions restrictions = 5;
    bytes excluded_nodes = 6 [(gogoproto.customtype) = "NodeIDList"];
}

message QueryRequest {
    node.Node sender = 1;
    node.Node target = 2;
    int64 limit = 3;
    bool pingback = 4;
}

message QueryResponse {
    node.Node sender = 1;
    repeated node.Node response = 2;
}

message PingRequest {};
message PingResponse {};

message Restriction {
    enum Operator {
        LT = 0;
        EQ = 1;
        GT = 2;
        LTE = 3;
        GTE = 4;
    }
    enum Operand {
        // TODO: `free_bandwidth`
        freeBandwidth = 0;
        // TODO: `free_disk`
        freeDisk = 1;
    }

    Operator operator = 1;
    Operand operand = 2;
    int64 value = 3;
}
